--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
   <title>KeepNote Notebook</title>
 
   <link type="text/css" rel="stylesheet" href="/static/thirdparty/css/bootstrap.css">
@@ -12,15 +13,17 @@
   <script type="text/javascript" src="/static/thirdparty/js/underscore.js"></script>
   <script type="text/javascript" src="/static/thirdparty/js/backbone.js"></script>
   <script type="text/javascript" src="/static/thirdparty/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/static/thirdparty/js/react.js"></script>
+  <script type="text/javascript" src="/static/thirdparty/js/JSXTransformer.js"></script>
 
   <script type="text/javascript" src="/static/js/notebook.js"></script>
-
+  <script type="text/jsx" src="/static/js/keepnote.jsx"></script>
 </head>
 <body>
 
 <div id="notebook"></div>
 
-<script>
+<script type="text/jsx">
     var notebook;
     var notebookView;
 
@@ -28,10 +31,16 @@
         $.get('/notebook/').done(function (rootid) {
             notebook = new Node({id: rootid});
 
-            notebookView = new NodeView({model: notebook});
-            notebookView.setElement($("#notebook").get(0));
+            //notebookView = new NodeView({model: notebook});
+            //notebookView.setElement($("#notebook").get(0));
 
             notebook.fetch();
+
+            // Start GUI.
+            React.render(
+              <NotebookTree node={notebook} />,
+              document.getElementById('notebook')
+            );
         });
     });
 </script>
