--- a/keepnote/server/static/css/keepnote.css
+++ b/keepnote/server/static/css/keepnote.css
@@ -12,7 +12,7 @@ body {
 }
 
 #notebook {
-  overflow-x: scroll;
+  overflow: auto;
 }
 
 #notebook ul {
@@ -34,5 +34,5 @@ body {
 }
 
 #page-view {
-  overflow: auto;
+  overflow-y: auto;
 }
