--- a/keepnote/server/static/css/keepnote.css
+++ b/keepnote/server/static/css/keepnote.css
@@ -28,6 +28,11 @@ body {
   background: #ddddff;
 }
 
+#page-toolbar {
+  background-color: #ccc;
+  padding-left: 5px;
+}
+
 #page-pane {
   border: solid #ccc 1px;
   float: left;
