--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -18,6 +18,9 @@
   <script type="text/javascript" src="/static/thirdparty/react/js/react.js"></script>
   <script type="text/javascript" src="/static/thirdparty/react/js/JSXTransformer.js"></script>
 
+  <script src="/static/thirdparty/wysihtml/js/wysihtml5x-toolbar.min.js"></script>
+  <script src="/static/thirdparty/wysihtml/js/advanced_and_extended.js"></script>
+
   <script type="text/javascript" src="/static/js/notebook.js"></script>
   <script type="text/jsx" src="/static/js/keepnote.jsx"></script>
 </head>
@@ -51,6 +54,13 @@
 
     function onNoteBookChange() {
         queueUpdateApp();
+    }
+
+    function initEditor() {
+        var editor = new wysihtml5.Editor('editor', {
+            toolbar: 'toolbar',
+            parserRules:  wysihtml5ParserRules
+        });
     }
 
     $(document).ready(function () {
