--- a/keepnote/server/static/css/keepnote.css
+++ b/keepnote/server/static/css/keepnote.css
@@ -30,7 +30,10 @@ body {
 
 .page-toolbar {
   background-color: #ccc;
-  padding-left: 5px;
+}
+
+.page-toolbar a {
+  padding: 2px 5px 2px 5px;
 }
 
 #page-pane {
