--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="/static/thirdparty/react/js/JSXTransformer.js"></script>
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/wysihtml5x-toolbar.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/advanced_and_extended.js"></script>
+  <script type="text/javascript" src="/static/thirdparty/xmldom/js/dom.js"></script>
 
   <!-- keepnote -->
   <link type="text/css" rel="stylesheet" href="/static/css/keepnote.css">
