add show attr to toolbar

--- a/keepnote/server/static/css/keepnote.css
+++ b/keepnote/server/static/css/keepnote.css
@@ -12,6 +12,10 @@ body {
   overflow: auto;
 }
 
+#treeview-pane:focus {
+  border: solid #ffcccc 1px;
+}
+
 .node-tree-title {
   cursor: pointer;
 }
