--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="/static/thirdparty/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/react/js/react.js"></script>
   <script type="text/javascript" src="/static/thirdparty/react/js/JSXTransformer.js"></script>
+  <script type="text/javascript" src="/static/thirdparty/react-dnd/js/ReactDND.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/wysihtml5x-toolbar.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/advanced_and_extended.js"></script>
   <script type="text/javascript" src="/static/thirdparty/xmldom/js/dom.js"></script>
