--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/wysihtml5x-toolbar.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/wysihtml/js/advanced_and_extended.js"></script>
   <script type="text/javascript" src="/static/thirdparty/xmldom/js/dom.js"></script>
+  <script type="text/javascript" src="/static/thirdparty/typeahead.js/js/typeahead.jquery.min.js"></script>
 
   <!-- keepnote -->
   <link type="text/css" rel="stylesheet" href="/static/css/keepnote.css">
