--- a/keepnote/server/templates/home.html
+++ b/keepnote/server/templates/home.html
@@ -8,6 +8,7 @@
   <link type="text/css" rel="stylesheet" href="/static/thirdparty/bootstrap/css/bootstrap.css">
   <link type="text/css" rel="stylesheet" href="/static/thirdparty/bootstrap/css/bootstrap-theme.css">
 
+  <script type="text/javascript" src="/static/thirdparty/strftime/js/strftime-min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/jquery/js/jquery.min.js"></script>
   <script type="text/javascript" src="/static/thirdparty/underscore/js/underscore.js"></script>
   <script type="text/javascript" src="/static/thirdparty/backbone/js/backbone.js"></script>
